# DelaCruzGuanilo_AlfredoSebastian_pc2

./: .gitignore  CMakeLists.txt  README.md
actividades/: actividad1_semana1.md  actividad2_semana2.md  actividad3_semana3.md
benchmark/: benchmark_main.cpp
demos/: demo_main.cpp
docs/: Simulador_NumberOfAtoms.pptx  analysis.md
include/: Solution.h
resultados/: output_benchmark.txt  output_tests.txt
src/: Solution.cpp
tests/: test_main.cpp
video/: enlace_video.txt
